@@ -1,5 +1,9 @@
 Revision history for WebService-Cmis:
 
+2012-09-11 MichaelDaum <github@michaeldaumconsulting.com>
+
+	 * skip all server tests when none is configured
+
 2012-08-31 MichaelDaum <github@michaeldaumconsulting.com>
 
 	 * fixed setting summary to the empty string
